Completes merger study

--- a/notebook.html
+++ b/notebook.html
@@ -362,6 +362,10 @@ to Ecosystem Services</h1>
 </div>
 
 
+<p>Search</p>
+<p><a href="https://gofarmhawaii.org/aghelp/" class="uri">https://gofarmhawaii.org/aghelp/</a></p>
+<p><a href="https://attra.ncat.org/topics/" class="uri">https://attra.ncat.org/topics/</a></p>
+<p><a href="https://ifssportal.nutritionconnect.org/solutions/explore" class="uri">https://ifssportal.nutritionconnect.org/solutions/explore</a></p>
 <div id="context" class="section level1">
 <h1>Context</h1>
 <p>The City and County of Honolulu’s Office of Climate Resilience has
@@ -383,6 +387,7 @@ sustainable agriculture to produce the contracted deliverables.</p>
 <ul>
 <li>CSA-ES literature synthesis</li>
 <li>CSA-ES Resource Database</li>
+<li>CSA Policy 1-pager</li>
 </ul>
 </div>
 <div id="data-pipeline-design" class="section level1">
