Updates plan of work

--- a/plan_of_work.html
+++ b/plan_of_work.html
@@ -433,19 +433,26 @@ synthesis</a></li>
 <li>Apr 29, 2024
 <ul>
 <li>Submit revised draft of web-hosted tool</li>
+<li>Assess needs for policy database integration into web tool</li>
+<li>COMPLETE: <a href="#csa-es-resource-database">CSA-ES Resource
+Database</a></li>
 </ul></li>
 <li>May 30, 2024
 <ul>
-<li>Meet to assess policy database integration into web tool</li>
+<li>Present draft of policy database integration</li>
 </ul></li>
 <li>Jun 15, 2024
 <ul>
 <li>Present integrated web tool with policy for review</li>
 <li>Present formalized academic literature synthesis</li>
+<li>COMPLETE: <a href="#web-hosted-database-interface">Web-hosted
+Database Interface</a></li>
 </ul></li>
 <li>Jun 30, 2024
 <ul>
 <li>Submit revised web-hosted tool with policy integration</li>
+<li>COMPLETE: <a href="#csa-es-literature-synthesis">CSA-ES literature
+synthesis</a></li>
 </ul></li>
 </ul>
 </div>
